--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -1,29 +1,34 @@
 /* Select the image with a class of kitty-1 */
 
-/*__write_selector_here__*/ {
+p {
   position: absolute;
   z-index: 1;
   top: 276px;
   left: 129px;
 }
 
-/* Select the image with id of kitty-2 */
+<img id="kitty-2" src="images/kitty-2.png" alt="Kitty 2">
 
-/*__write_selector_here__*/ {
+p {
   position: absolute;
   z-index: 2;
   top: 212px;
   left: 369px;
 }
-
+    
 /* Select the image inside the element with an id of basket (using its descendent relationship) */
 
-/*__write_selector_here__*/ {
+  <div id= "basket" 
+      <img src="images/kitty-3.png" alt="kitty 3"
+    </div>
+
+p {
   position: absolute;
   z-index: 5;
   top: 291px;
   left: 319px;
 }
+
 
 /* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
 
